<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary_variant"
    android:orientation="vertical"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="120dp"
        android:background="@color/material_dynamic_neutral80"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/rims" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/create_your_account"
            android:textColor="@color/material_dynamic_tertiary30"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints="emailAddress"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/input_your_email"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints="password"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/input_your_password"
            android:inputType="textPassword"
            android:textSize="24sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/create"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/loginNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_to_login"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>